--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@ nav {
 a {
   text-decoration: none;
   opacity: 0.75;
+  color: #fff;
 }
 
 a:hover {
@@ -42,6 +43,8 @@ section {
 /* Header Styles */
 
 header {
+  position: absolute;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -49,6 +52,7 @@ header {
   /* Header animation */
   animation: 1s fadein 0.5s forwards;
   opacity: 0;
+  color: #fff;
 }
 
 @keyframes fadein {
@@ -77,6 +81,7 @@ header nav li {
   justify-content: center;
   text-align: center;
   min-height: 100vh;
+  color: #fff;
 }
 
 .hero .background-image {
@@ -88,4 +93,32 @@ header nav li {
   background-size: cover;
   z-index: -1;
   background-color: #80a3db;
+}
+
+.hero h1 {
+  font: bold 60px "Open Sans", sans-serif;
+  margin-bottom: 15px;
+}
+
+.hero h3 {
+  font: normal 28px "Open Sans", sans-serif;
+  margin-bottom: 40px;
+}
+
+.hero a.btn {
+  padding: 20px 46px;
+}
+
+
+.hero-content-area {
+  opacity: 0;
+  margin-top: 100%;
+  animation: 1s slidefade 1s forwards;
+}
+
+@keyframes slidefade{
+  100% {
+    opacity: 1;
+    margin: 0;
+  }
 }
